phase 1, client, server transmitting data

--- a/tests/simple_net/server/Makefile
+++ b/tests/simple_net/server/Makefile
@@ -3,7 +3,8 @@ CC = $(CXX)
 
 #dependencies:
 DEPENDENCY1=Socket
-DEPENDENCY2=server
+DEPENDENCY2=TCPServerSocket
+DEPENDENCY3=TCPClientSocket
 
 
 CPPFLAGS = -I$(INC_DIR)
@@ -23,7 +24,8 @@ SRC_DIR = ../../../src/
 INC_DIR = ../../../inc/
 
 TARGET = utest
-OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o
+OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o
+ 
 
 all: $(TARGET)
 
