vector of 1000 doubles test added

--- a/tests/simple_net/server/Makefile
+++ b/tests/simple_net/server/Makefile
@@ -25,7 +25,7 @@ INC_DIR = ../../../inc/
 
 TARGET = utest
 OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o
- 
+OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d
 
 all: $(TARGET)
 
@@ -40,7 +40,7 @@ vala: all
 utest.o: utest.cpp
 
 clean:
-	@$(RM) $(TARGET) $(OBJS)
+	@$(RM) $(TARGET) $(OBJS) $(OBJSD)
 
 .PHONY: all check clean
 
