basic design of epoll

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,9 @@
         "functional": "cpp",
         "numeric": "cpp",
         "deque": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "bit": "cpp",
+        "cstring": "cpp",
+        "memory": "cpp"
     }
 }
