--- a/tests/async_net/client/Makefile
+++ b/tests/async_net/client/Makefile
@@ -7,6 +7,7 @@ DEPENDENCY2=TCPClientSocket
 DEPENDENCY3=TCPAsynchronizer
 DEPENDENCY4=TCPServerAsync
 DEPENDENCY5=TCPSocketExceptions
+DEPENDENCY6=SumNumHandler
 
 
 
@@ -27,8 +28,8 @@ SRC_DIR = ../../../src/
 INC_DIR = ../../../inc/
 
 TARGET = utest
-OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o ${SRC_DIR}${DEPENDENCY4}.o ${SRC_DIR}${DEPENDENCY5}.o
-OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY4}.d ${SRC_DIR}${DEPENDENCY5}.d
+OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o ${SRC_DIR}${DEPENDENCY4}.o ${SRC_DIR}${DEPENDENCY5}.o ${SRC_DIR}${DEPENDENCY6}.o
+OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY4}.d ${SRC_DIR}${DEPENDENCY5}.d ${SRC_DIR}${DEPENDENCY6}.d
 
 all: $(TARGET)
 
