--- a/tests/simple_net/client/Makefile
+++ b/tests/simple_net/client/Makefile
@@ -5,6 +5,7 @@ CC = $(CXX)
 DEPENDENCY1=Socket
 DEPENDENCY2=TCPClientSocket
 DEPENDENCY3=TCPSocketExceptions
+DEPENDENCY4=TcpProtocol
 
 
 CPPFLAGS = -I$(INC_DIR)
@@ -24,8 +25,8 @@ SRC_DIR = ../../../src/
 INC_DIR = ../../../inc/
 
 TARGET = utest
-OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o
-OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d
+OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o ${SRC_DIR}${DEPENDENCY4}.o
+OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY4}.d
 
 all: $(TARGET)
 
