simple_net unfinished unPack

--- a/tests/simple_net/server/Makefile
+++ b/tests/simple_net/server/Makefile
@@ -6,6 +6,7 @@ DEPENDENCY1=Socket
 DEPENDENCY2=TCPServerSocket
 DEPENDENCY3=TCPClientSocket
 DEPENDENCY4=TCPSocketExceptions
+DEPENDENCY5=TcpProtocol
 
 
 CPPFLAGS = -I$(INC_DIR)
@@ -25,8 +26,8 @@ SRC_DIR = ../../../src/
 INC_DIR = ../../../inc/
 
 TARGET = utest
-OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o ${SRC_DIR}${DEPENDENCY4}.o
-OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY3}.d
+OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o ${SRC_DIR}${DEPENDENCY4}.o ${SRC_DIR}${DEPENDENCY5}.o
+OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY5}.d
 
 all: $(TARGET)
 
