Blocking Q with threads pool

--- a/tests/BlockingQ/Makefile
+++ b/tests/BlockingQ/Makefile
@@ -4,7 +4,7 @@ CC = $(CXX)
 #dependencies:
 DEPENDENCY1=BlockingQueue
 DEPENDENCY2=Semaphore
-
+DEPENDENCY3=ThreadsPool
 
 CPPFLAGS = -I$(INC_DIR)
 CPPFLAGS += -MMD -MP
@@ -25,8 +25,8 @@ SRC_DIR = ../../src/
 INC_DIR = ../../inc/
 
 TARGET = utest
-OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o
-OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d
+OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o
+OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d
 
 all: $(TARGET)
 
