--- a/tests/messenger/Makefile
+++ b/tests/messenger/Makefile
@@ -6,6 +6,9 @@ DEPENDENCY1=IEncryptor
 DEPENDENCY2=encryptionFactory
 DEPENDENCY3=messenger
 DEPENDENCY4=senderFactory
+DEPENDENCY5=messengerFactory
+DEPENDENCY6=sourceFactory
+DEPENDENCY7=IStream
 
 CPPFLAGS = -I$(INC_DIR)
 CPPFLAGS += -MMD -MP
@@ -26,8 +29,8 @@ SRC_DIR = ../../src/
 INC_DIR = ../../inc/
 
 TARGET = utest
-OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o ${SRC_DIR}${DEPENDENCY4}.o
-OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY4}.d
+OBJS = utest.o ${SRC_DIR}${DEPENDENCY1}.o ${SRC_DIR}${DEPENDENCY2}.o ${SRC_DIR}${DEPENDENCY3}.o ${SRC_DIR}${DEPENDENCY4}.o ${SRC_DIR}${DEPENDENCY5}.o ${SRC_DIR}${DEPENDENCY6}.o ${SRC_DIR}${DEPENDENCY7}.o
+OBJSD = ${SRC_DIR}${DEPENDENCY1}.d ${SRC_DIR}${DEPENDENCY2}.d ${SRC_DIR}${DEPENDENCY3}.d ${SRC_DIR}${DEPENDENCY4}.d ${SRC_DIR}${DEPENDENCY5}.d ${SRC_DIR}${DEPENDENCY6}.d ${SRC_DIR}${DEPENDENCY7}.d
 
 all: $(TARGET)
 
